# Solance

./: Cargo.toml  LIST.md  README.md  \  game.pgn
crates/solance-analysis/: Cargo.toml
crates/solance-analysis/src/: lib.rs
crates/solance-cli/: Cargo.toml
crates/solance-cli/src/: main.rs
crates/solance-core/: Cargo.toml
crates/solance-core/src/: game.rs  lib.rs  move_record.rs  position.rs  zobrist.rs
crates/solance-engine/: Cargo.toml
crates/solance-engine/src/: lib.rs
crates/solance-parser/: Cargo.toml
crates/solance-parser/src/: lib.rs
crates/solance-render/: Cargo.toml
crates/solance-render/src/: lib.rs
crates/solance-web/: Cargo.toml
crates/solance-web/src/: main.rs
web/: package.json  svelte.config.js
web/src/lib/: api.ts
web/src/lib/components/: Board.svelte  GameStats.svelte  MoveTable.svelte  ScoreGraph.svelte
web/src/lib/types/: analysis.ts
web/src/routes/: +page.svelte
