[package]
name = "solance-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
solance-core     = { path = "../solance-core" }
solance-parser   = { path = "../solance-parser" }
solance-engine   = { path = "../solance-engine" }
solance-analysis = { path = "../solance-analysis" }
pgn-reader       = "0.25"
